tests/expectations/parser-expression/expression/array_inline_fail.out
Error [EPAR0370009]: unexpected string: expected 'expression', found ','
    --> test_0:1:2
     |
   1 | [,]
     |  ^
Error [EPAR0370009]: unexpected string: expected 'expression', found ','
    --> test_1:1:2
     |
   1 | [,,]
     |  ^
Error [EPAR0370009]: unexpected string: expected 'expression', found ','
    --> test_2:1:4
     |
   1 | [0,,]
     |    ^
Error [EPAR0370009]: unexpected string: expected 'expression', found ','
    --> test_3:1:2
     |
   1 | [,0]
     |  ^
Error [EPAR0370009]: unexpected string: expected 'expression', found ','
    --> test_4:1:2
     |
   1 | [,0,]
     |  ^
